# opengl_sdl2_demo

./: .gitignore  Cargo.toml  README.md  build.rs
src/camera/: mod.rs
src/examples/camera/: camera_class.rs  camera_view.rs
src/examples/coordinate_systems/: model_view_matrix.rs  mvm_more_cubes.rs
src/examples/coordinate_systems/shader/: model_view_projection.glslf  model_view_projection.glslv
src/examples/hello_triangle/: two_triangles.rs  two_triangles_and_vbo.rs
src/examples/shaders/: triangle_exercise_3.rs  uniform.rs
src/examples/shaders/shader/: triangle-3.glslv  triangle.glslv
src/examples/textures/: rectangle_texture.rs  triangle_texture.rs
src/examples/textures/shader/: texture.glslf  texture.glslv
src/examples/transformations/: transformation.rs
src/examples/transformations/shader/: transformation.glslv
src/gl_gen/: mod.rs
src/shader/: mod.rs
